// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormControl > Snapshot > With multiple field 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: var(--b-alpha-stack-direction);
  -ms-flex-direction: var(--b-alpha-stack-direction);
  flex-direction: var(--b-alpha-stack-direction);
  gap: var(--b-alpha-stack-spacing);
  -webkit-align-items: var(--b-alpha-stack-align);
  -webkit-box-align: var(--b-alpha-stack-align);
  -ms-flex-align: var(--b-alpha-stack-align);
  align-items: var(--b-alpha-stack-align);
  -webkit-box-pack: var(--b-alpha-stack-justify);
  -webkit-justify-content: var(--b-alpha-stack-justify);
  -ms-flex-pack: var(--b-alpha-stack-justify);
  justify-content: var(--b-alpha-stack-justify);
}

.c1 {
  position: relative;
}

.c2 {
  padding: 0 2px;
  margin-bottom: 4px;
}

.c9 {
  padding: 0 2px;
  margin-top: 4px;
}

.c4 {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c10 {
  display: block;
  text-align: left;
}

.c3 {
  display: block;
  text-align: left;
  word-break: break-word;
}

.c7 {
  width: 100%;
  height: 100%;
  padding: 0;
  cursor: auto;
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 1.4rem;
  line-height: 1.8rem;
  color: #000000D9;
}

.c7::-webkit-input-placeholder {
  color: #00000066;
}

.c7::-moz-placeholder {
  color: #00000066;
}

.c7:-ms-input-placeholder {
  color: #00000066;
}

.c7::placeholder {
  color: #00000066;
}

.c5 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FCFCFC;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c5 .c6 {
  font-size: 1.4rem;
  line-height: 1.8rem;
}

.c8 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FFFFFF;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  box-shadow: 0 0 0 3px #F4800B4D, inset 0 0 0 1px #F4800B;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c8 .c6 {
  font-size: 1.4rem;
  line-height: 1.8rem;
}

@supports not(gap:var(--b-alpha-stack-spacing)) {
  .c0 {
    margin-top: calc(var(--b-alpha-stack-spacing) * -1);
    margin-left: calc(var(--b-alpha-stack-spacing) * -1);
  }

  .c0 > * {
    margin-top: var(--b-alpha-stack-spacing);
    margin-left: var(--b-alpha-stack-spacing);
  }
}

<div>
  <div
    class="c0"
    data-testid="bezier-react-form-control"
    style="--b-form-control-left-label-wrapper-height: 36px; --b-alpha-stack-direction: column; --b-alpha-stack-justify: flex-start; --b-alpha-stack-align: stretch; --b-alpha-stack-spacing: 0;"
  >
    <div
      class="c1 c2"
    >
      <label
        class="margin Text typo-13 bold c3"
        data-testid="bezier-react-form-label"
        foundation="[object Object]"
        id="form-label"
        style="--b-text-color: var(--txt-black-darkest);"
      >
        Label
      </label>
    </div>
    <div
      aria-describedby="form-help-text"
      aria-labelledby="form-label"
      class="c0 c4"
      data-testid="bezier-react-form-group"
      id="form-group"
      role="group"
      style="--b-alpha-stack-direction: column; --b-alpha-stack-justify: flex-start; --b-alpha-stack-align: stretch; --b-alpha-stack-spacing: 6px;"
    >
      <div
        class="c0"
        data-testid="bezier-react-form-control"
        style="--b-form-control-left-label-wrapper-height: 36px; --b-alpha-stack-direction: column; --b-alpha-stack-justify: flex-start; --b-alpha-stack-align: stretch; --b-alpha-stack-spacing: 0;"
      >
        <div
          class="c1 c2"
        >
          <label
            class="margin Text typo-13 bold c3"
            data-testid="bezier-react-form-label"
            for="field-:r3:"
            foundation="[object Object]"
            id="field-:r3:-label"
            style="--b-text-color: var(--txt-black-darkest);"
          >
            First Inner Label
          </label>
        </div>
        <div
          class="c5"
          data-testid="bezier-react-text-input"
          size="36"
        >
          <input
            autocomplete="off"
            class="c6 c7"
            id="field-:r3:"
            size="36"
            value=""
          />
        </div>
      </div>
      <div
        class="c0"
        data-testid="bezier-react-form-control"
        style="--b-form-control-left-label-wrapper-height: 36px; --b-alpha-stack-direction: column; --b-alpha-stack-justify: flex-start; --b-alpha-stack-align: stretch; --b-alpha-stack-spacing: 0;"
      >
        <div
          class="c1 c2"
        >
          <label
            class="margin Text typo-13 bold c3"
            data-testid="bezier-react-form-label"
            for="field-:r4:"
            foundation="[object Object]"
            id="field-:r4:-label"
            style="--b-text-color: var(--txt-black-darkest);"
          >
            Second Inner Label
          </label>
        </div>
        <div
          class="c8"
          data-testid="bezier-react-text-input"
          size="36"
        >
          <input
            aria-invalid="true"
            autocomplete="off"
            class="c6 c7"
            id="field-:r4:"
            size="36"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="c1 c9"
    >
      <p
        class="margin Text typo-13 c10"
        data-testid="bezier-react-form-helper-text"
        foundation="[object Object]"
        id="form-help-text"
        style="--b-text-color: var(--txt-black-dark);"
      >
        Description
      </p>
    </div>
  </div>
</div>
`;

exports[`FormControl > Snapshot > With multiple field and left label position 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: var(--b-alpha-stack-direction);
  -ms-flex-direction: var(--b-alpha-stack-direction);
  flex-direction: var(--b-alpha-stack-direction);
  gap: var(--b-alpha-stack-spacing);
  -webkit-align-items: var(--b-alpha-stack-align);
  -webkit-box-align: var(--b-alpha-stack-align);
  -ms-flex-align: var(--b-alpha-stack-align);
  align-items: var(--b-alpha-stack-align);
  -webkit-box-pack: var(--b-alpha-stack-justify);
  -webkit-justify-content: var(--b-alpha-stack-justify);
  -ms-flex-pack: var(--b-alpha-stack-justify);
  justify-content: var(--b-alpha-stack-justify);
}

.c0 {
  position: relative;
}

.c6 {
  padding: 0 2px;
  margin-bottom: 4px;
}

.c11 {
  padding: 0 2px;
  margin-top: 4px;
}

.c1 {
  display: grid;
  grid-template-rows: repeat(2,auto);
  grid-template-columns: 150px 1fr;
  grid-column-gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-row: 1 / 1;
  grid-column: 1 / 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  height: var(--b-form-control-left-label-wrapper-height);
}

.c12 {
  grid-row: 2 / 2;
  grid-column: 2;
}

.c5 {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c13 {
  display: block;
  text-align: left;
}

.c3 {
  display: block;
  text-align: left;
  word-break: break-word;
}

.c9 {
  width: 100%;
  height: 100%;
  padding: 0;
  cursor: auto;
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 1.4rem;
  line-height: 1.8rem;
  color: #000000D9;
}

.c9::-webkit-input-placeholder {
  color: #00000066;
}

.c9::-moz-placeholder {
  color: #00000066;
}

.c9:-ms-input-placeholder {
  color: #00000066;
}

.c9::placeholder {
  color: #00000066;
}

.c7 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FCFCFC;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c7 .c8 {
  font-size: 1.4rem;
  line-height: 1.8rem;
}

.c10 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FFFFFF;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  box-shadow: 0 0 0 3px #F4800B4D, inset 0 0 0 1px #F4800B;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c10 .c8 {
  font-size: 1.4rem;
  line-height: 1.8rem;
}

@supports not(gap:var(--b-alpha-stack-spacing)) {
  .c4 {
    margin-top: calc(var(--b-alpha-stack-spacing) * -1);
    margin-left: calc(var(--b-alpha-stack-spacing) * -1);
  }

  .c4 > * {
    margin-top: var(--b-alpha-stack-spacing);
    margin-left: var(--b-alpha-stack-spacing);
  }
}

<div>
  <div
    class="c0 c1"
    data-testid="bezier-react-form-control"
    style="--b-form-control-left-label-wrapper-height: 36px;"
  >
    <div
      class="c0 c2"
    >
      <label
        class="margin Text typo-14 bold c3"
        data-testid="bezier-react-form-label"
        foundation="[object Object]"
        id="form-label"
        style="--b-text-color: var(--txt-black-darkest);"
      >
        Label
      </label>
    </div>
    <div
      aria-describedby="form-help-text"
      aria-labelledby="form-label"
      class="c4 c5"
      data-testid="bezier-react-form-group"
      id="form-group"
      role="group"
      style="--b-alpha-stack-direction: column; --b-alpha-stack-justify: flex-start; --b-alpha-stack-align: stretch; --b-alpha-stack-spacing: 6px;"
    >
      <div
        class="c4"
        data-testid="bezier-react-form-control"
        style="--b-form-control-left-label-wrapper-height: 36px; --b-alpha-stack-direction: column; --b-alpha-stack-justify: flex-start; --b-alpha-stack-align: stretch; --b-alpha-stack-spacing: 0;"
      >
        <div
          class="c0 c6"
        >
          <label
            class="margin Text typo-13 bold c3"
            data-testid="bezier-react-form-label"
            for="field-:r6:"
            foundation="[object Object]"
            id="field-:r6:-label"
            style="--b-text-color: var(--txt-black-darkest);"
          >
            First Inner Label
          </label>
        </div>
        <div
          class="c7"
          data-testid="bezier-react-text-input"
          size="36"
        >
          <input
            autocomplete="off"
            class="c8 c9"
            id="field-:r6:"
            size="36"
            value=""
          />
        </div>
      </div>
      <div
        class="c4"
        data-testid="bezier-react-form-control"
        style="--b-form-control-left-label-wrapper-height: 36px; --b-alpha-stack-direction: column; --b-alpha-stack-justify: flex-start; --b-alpha-stack-align: stretch; --b-alpha-stack-spacing: 0;"
      >
        <div
          class="c0 c6"
        >
          <label
            class="margin Text typo-13 bold c3"
            data-testid="bezier-react-form-label"
            for="field-:r7:"
            foundation="[object Object]"
            id="field-:r7:-label"
            style="--b-text-color: var(--txt-black-darkest);"
          >
            Second Inner Label
          </label>
        </div>
        <div
          class="c10"
          data-testid="bezier-react-text-input"
          size="36"
        >
          <input
            aria-invalid="true"
            autocomplete="off"
            class="c8 c9"
            id="field-:r7:"
            size="36"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="c0 c11 c12"
    >
      <p
        class="margin Text typo-13 c13"
        data-testid="bezier-react-form-helper-text"
        foundation="[object Object]"
        id="form-help-text"
        style="--b-text-color: var(--txt-black-dark);"
      >
        Description
      </p>
    </div>
  </div>
</div>
`;

exports[`FormControl > Snapshot > With single field 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: var(--b-alpha-stack-direction);
  -ms-flex-direction: var(--b-alpha-stack-direction);
  flex-direction: var(--b-alpha-stack-direction);
  gap: var(--b-alpha-stack-spacing);
  -webkit-align-items: var(--b-alpha-stack-align);
  -webkit-box-align: var(--b-alpha-stack-align);
  -ms-flex-align: var(--b-alpha-stack-align);
  align-items: var(--b-alpha-stack-align);
  -webkit-box-pack: var(--b-alpha-stack-justify);
  -webkit-justify-content: var(--b-alpha-stack-justify);
  -ms-flex-pack: var(--b-alpha-stack-justify);
  justify-content: var(--b-alpha-stack-justify);
}

.c1 {
  position: relative;
}

.c2 {
  padding: 0 2px;
  margin-bottom: 4px;
}

.c7 {
  padding: 0 2px;
  margin-top: 4px;
}

.c8 {
  display: block;
  text-align: left;
}

.c3 {
  display: block;
  text-align: left;
  word-break: break-word;
}

.c6 {
  width: 100%;
  height: 100%;
  padding: 0;
  cursor: auto;
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 1.4rem;
  line-height: 1.8rem;
  color: #000000D9;
}

.c6::-webkit-input-placeholder {
  color: #00000066;
}

.c6::-moz-placeholder {
  color: #00000066;
}

.c6:-ms-input-placeholder {
  color: #00000066;
}

.c6::placeholder {
  color: #00000066;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FCFCFC;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c4 .c5 {
  font-size: 1.4rem;
  line-height: 1.8rem;
}

@supports not(gap:var(--b-alpha-stack-spacing)) {
  .c0 {
    margin-top: calc(var(--b-alpha-stack-spacing) * -1);
    margin-left: calc(var(--b-alpha-stack-spacing) * -1);
  }

  .c0 > * {
    margin-top: var(--b-alpha-stack-spacing);
    margin-left: var(--b-alpha-stack-spacing);
  }
}

<div
  class="c0"
  data-testid="bezier-react-form-control"
  style="--b-form-control-left-label-wrapper-height: 36px; --b-alpha-stack-direction: column; --b-alpha-stack-justify: flex-start; --b-alpha-stack-align: stretch; --b-alpha-stack-spacing: 0;"
>
  <div
    class="c1 c2"
  >
    <label
      class="margin Text typo-13 bold c3"
      data-testid="bezier-react-form-label"
      for="form"
      foundation="[object Object]"
      id="form-label"
      style="--b-text-color: var(--txt-black-darkest);"
    >
      Label
    </label>
  </div>
  <div
    class="c4"
    data-testid="bezier-react-text-input"
    size="36"
  >
    <input
      aria-describedby="form-help-text"
      autocomplete="off"
      class="c5 c6"
      id="form"
      size="36"
      value=""
    />
  </div>
  <div
    class="c1 c7"
  >
    <p
      class="margin Text typo-13 c8"
      data-testid="bezier-react-form-helper-text"
      foundation="[object Object]"
      id="form-help-text"
      style="--b-text-color: var(--txt-black-dark);"
    >
      Description
    </p>
  </div>
</div>
`;

exports[`FormControl > Snapshot > With single field and left label position 1`] = `
.c0 {
  position: relative;
}

.c7 {
  padding: 0 2px;
  margin-top: 4px;
}

.c1 {
  display: grid;
  grid-template-rows: repeat(2,auto);
  grid-template-columns: 150px 1fr;
  grid-column-gap: 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  grid-row: 1 / 1;
  grid-column: 1 / 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
  height: var(--b-form-control-left-label-wrapper-height);
}

.c8 {
  grid-row: 2 / 2;
  grid-column: 2;
}

.c9 {
  display: block;
  text-align: left;
}

.c3 {
  display: block;
  text-align: left;
  word-break: break-word;
}

.c6 {
  width: 100%;
  height: 100%;
  padding: 0;
  cursor: auto;
  background-color: transparent;
  border: none;
  outline: none;
  font-size: 1.4rem;
  line-height: 1.8rem;
  color: #000000D9;
}

.c6::-webkit-input-placeholder {
  color: #00000066;
}

.c6::-moz-placeholder {
  color: #00000066;
}

.c6:-ms-input-placeholder {
  color: #00000066;
}

.c6::placeholder {
  color: #00000066;
}

.c4 {
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  padding: 0 12px;
  background-color: #FCFCFC;
  overflow: hidden;
  border-radius: 8px;
  box-shadow: 0 1px 2px #0000000D, inset 0 0 0 1px #00000026;
  -webkit-transition-delay: 0ms;
  transition-delay: 0ms;
  -webkit-transition-timing-function: cubic-bezier(.3,0,0,1);
  transition-timing-function: cubic-bezier(.3,0,0,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
  -webkit-transition-property: border-color,box-shadow;
  transition-property: border-color,box-shadow;
}

.c4 .c5 {
  font-size: 1.4rem;
  line-height: 1.8rem;
}

<div
  class="c0 c1"
  data-testid="bezier-react-form-control"
  style="--b-form-control-left-label-wrapper-height: 36px;"
>
  <div
    class="c0 c2"
  >
    <label
      class="margin Text typo-14 bold c3"
      data-testid="bezier-react-form-label"
      for="form"
      foundation="[object Object]"
      id="form-label"
      style="--b-text-color: var(--txt-black-darkest);"
    >
      Label
    </label>
  </div>
  <div
    class="c4"
    data-testid="bezier-react-text-input"
    size="36"
  >
    <input
      aria-describedby="form-help-text"
      autocomplete="off"
      class="c5 c6"
      id="form"
      size="36"
      value=""
    />
  </div>
  <div
    class="c0 c7 c8"
  >
    <p
      class="margin Text typo-13 c9"
      data-testid="bezier-react-form-helper-text"
      foundation="[object Object]"
      id="form-help-text"
      style="--b-text-color: var(--txt-black-dark);"
    >
      Description
    </p>
  </div>
</div>
`;
